--- a/src/App.css
+++ b/src/App.css
@@ -72,10 +72,6 @@
   background: transparent;
 }
 
-.shadow {
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
 .form-range {
   appearance: none;
   width: 100%;
@@ -111,13 +107,18 @@ h4 {
 }
 
 .table img {
-  transition: transform 0.3s ease;
+  transition: transform 0.5s ease;
 }
 
 .table img:hover {
-  transform: scale(1.2);
+  transform: scale(1.5);
 }
 
 .table td:last-child {
   text-align: center;
+}
+
+.rmsc .dropdown-container{
+  border: 2px solid red;
+  border-radius: 25px;
 }
